20141229
	Avoid `preserved' packages to be `autoremoved'

20141228
	Fixed GH issue #1, NULL PKG_PATH (which is wrong btw) makes pkgin
	segfault, strcmp() secured with safe_strcmp()
	Added --with-pkginstall to configure

20141223
	Fixed GH issue #36, automatic flag no more set when a package is
	installed via pkg_add(1)
	Added -p (parsable) flag for 3rd party frontends
	Added statistics (patch by Youri Mouton)
	Package-names-containing-a-dot fix (patch by Yamamoto Takashi)

20140407
	0.6.5
	Multi-repo debugging, fixed packages order

20130616
	0.6.4
	Fixed many return codes
	Large file systems fix by Filip Hajny
	gcc 4.7 / unused-but-set-variable fix by Makoto Fujiwara

20130410
	Migrated to github, updated website

20130131
	Fixed computing of download size for local repositories (Reported by
	Ignatios Souvatzis in PR#47501)

20121214
	0.6.3.1
	Do not exit with not enough space message when install size is negative

20121202
	PR3555339@sf (stacktic)
	Avoid negative speed when a download start (stacktic)

20121124
	PR47196 fixed by stacktic

20121117
	PR47060 fixed by stacktic

20121114
	0.6.3
	Added show-no-keep by orgrim
	Fixed PR47192 (by stacktic)

20120801
	0.6.2.2
	Fixed bad size_pkg
	Fixed build on platforms lacking __UNCONST

20120730
	Modified default behaviour for Proceed [Y/n]
	Sync wip with pkgsrc: pkgin 0.6.2 

20120729
	Rewrote narrow_match() using version_check() to avoid more
	dirty repositories mistakes.

20120715
	Preparing pkginteractive integration.

20120530
	SQLite is now part of NetBSD 6.0 base, remove it from pkgin's tree.
	Dependency will be added in the package.

20120528
	Added SQLite build patch from sbd@
	Added show-all-categories
	unlink() before symlink()

20120525
	Dynamically read PKG_DBDIR from pkg_admin

20120524
	Do not delete repository entries if the new one is unreachable.

20120429
	When a package is marked as TOREMOVE and TOUPGRADE because of a
	dependency breakage during upgrade, just follow the usual upgrade
	process.
